<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MapActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="416dp"
        android:layout_height="602dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout="@android:layout/simple_gallery_item" />

    <Button
        android:id="@+id/logout"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Logout"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/SOS"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:text="@string/SOS"
        android:background="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="0.711"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/Help"
        app:layout_constraintBottom_toTopOf="@+id/SOS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/locationButton"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@null"
        android:src="@android:drawable/ic_menu_mylocation"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        app:layout_constraintVertical_bias="0.929" />

    <ImageButton
        android:id="@+id/shareOnTwitter"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:contentDescription="@null"
        android:src="@drawable/twitter_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <ImageButton
        android:id="@+id/zoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@null"
        android:src="@drawable/zoom_in"
        android:onClick="onZoom"
        app:layout_constraintBottom_toTopOf="@+id/zoomOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/zoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@null"
        android:onClick="onZoom"
        android:src="@drawable/zoom_out"
        app:layout_constraintBottom_toTopOf="@+id/locationButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/showList"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:text="@string/List"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

</androidx.constraintlayout.widget.ConstraintLayout>
